# sinh-x-gitstatus

./: .gitignore  Cargo.toml  flake.nix
src/: config.rs  git_database.rs  git_status.rs  lib.rs  main.rs
