[package]
name = "sinh-x-gitstatus"
version = "0.2.0"
edition = "2021"

[dependencies]
bincode = "1.3"
db = "0.1"
dirs = "5.0"
env_logger = "0.11"
log = "0.4"
rocksdb = "0.22"
semver = {version = "1.0", features = ["serde"]}
serde = "1.0"
serde_derive = "1.0"
structopt = "0.3"
toml = "0.8"

[features]
dev = []
debug-logging = []
